[package]
name = "maxon"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.0"
bevy-inspector-egui = "0.25.1"
bevy-persistent = { version = "0.6.0", features = ["bincode", "json", "pretty"] }
bevy_asset_loader = { version = "0.21.0", features = ["2d", "3d"] }
bevy_common_assets = { version = "0.11.0", features = ["json"] }
bevy_flycam = "0.14.0"
bevy_mod_picking = "0.20.1"
bevy_sprite3d = "3.0.0"
dirs = "5.0.1"
serde = { version = "1.0.204", features = ["derive"] }
whoami = "1.5.1"
# TODO: change to the original package after it merges the pull request
bevy_simple_scroll_view = { git = "https://github.com/ProjectKML/bevy_simple_scroll_view.git", rev = "6d6f9c907e412953f694aa3a22949abd8759897c" }
serde_json = "1.0.120"
bevy_tweening = "0.11.0"
rand = "0.8.5"
bevy_mod_billboard = "0.7.0"

[features]
debug = []
