[package]
name = "server"
description = "a server for ONLINE 0o0 petting in SUPER CUTE 3D CLICKER GAME :3"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
bevy = "0.14.1"
bevy_eventwork = "0.9.0"
protocols = { path = "../protocols" }
